2004-08-13  Andrew Lunn  <andrew.lunn@ascom.ch>

        * src/flash.c: Make the flock lock/unlock code compile without
	warnings.
	* src/flashiodev.c (flashiodev_lookup): Only initialize the device
	if we have not already been initialized via cyg_set_config().
	This stopped redboots mount -f working.

2004-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flashiodev.c (flashiodev_lookup): Moved most of the
	flashiodev_init into this new function. This fixed the ordering
	issue with redboot startup. When doing a FIS name lookup in
	flashiodev_init, redboot was not yet nitialised so lookup
	failed. Moving this into flashiodev_lookup solves this problem.
	Its now possible for redboot to mount the jffs2 filesystem with 
	-d /dev/flash1.

2004-08-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flashiodev.c: Fix typo in macro and configuration options
	
2004-08-05  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c: Major rewrite to implement a new API
	* src/legacy_api.c: Support the legacy API
	* src/legacy_drv.c: Support the legacy driver API
	* src/flashiodev.c: Support the new API and multiple devices
	* include/flash_priv.h: Interface devices should use
	* cdl/io_flash.cdl: Updates for new interface and multiple devices.
	
2004-06-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (flash_read): Don't check if the flash is write 
  	  protected before performing a read.
        * doc/flash.sgml
	* cdl/io_flash.cdl: Added documentation of the FLASH API

2004-04-29  Sebastien Couret  <sebastien.couret@elios-informatique.com>
2004-04-29  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flashiodev.c: When checking flash upper bound, allow for end
	of flash at 0xffffffff.

2003-11-27  David Woodhouse  <dwmw2@infradead.org>

	* src/flashiodev.c: Enable set_config() and implement
	CYG_IO_SET_CONFIG_FLASH_FIS_NAME.
	
2003-11-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c: gcc 3.x vs gcc 2.x problems. 

2003-11-24  Jani Monoses  <jani@iv.ro>
